--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,4 +1,4 @@
 // you can change config here
-$theme-colors: #2196f3, #f26d6d, #3eaf7c, #fb9b5f;
+$theme-colors: #2196f3, #f26d6d, #fb9b5f,#9b59b6;
 //$code-bg-color: white;
 $code-color: #2196f3;
